--- a/book-store/styles/globals.css
+++ b/book-store/styles/globals.css
@@ -16,6 +16,13 @@
   }
 }
 
+@font-face {
+  font-family: "Montserrat";
+  src: url("/fonts/Montserrat-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
