--- a/book-store/components/header.module.css
+++ b/book-store/components/header.module.css
@@ -1,6 +1,6 @@
 .header {
   display: flex;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Roboto", sans-serif;
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
@@ -24,8 +24,8 @@
 }
 
 .profile img {
-  width: 30px;
-  height: 30px;
+  width: 1.875rem;
+  height: 1.875rem;
   margin-right: 0.5rem;
   border-radius: 50%;
 }
