--- a/book-store/components/header.module.css
+++ b/book-store/components/header.module.css
@@ -1,6 +1,6 @@
 .header {
   display: flex;
-  font-family: "Roboto", sans-serif;
+  font-family: "Montserrat", sans-serif;
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
