--- a/book-store/components/slider.module.css
+++ b/book-store/components/slider.module.css
@@ -1,4 +1,3 @@
-/* components/Slider.module.css */
 .sliderContainer {
   position: relative;
   width: 100%;
@@ -29,4 +28,10 @@
 
 .swiper-pagination-bullet-active {
   background-color: #ff4500; /* Цвет активной точки */
+}
+
+.banner {
+  display: flex;
+  justify-content: center;
+  width: 90%;
 }
