--- a/book-store/styles/globals.css
+++ b/book-store/styles/globals.css
@@ -20,3 +20,11 @@ body {
   color: rgb(var(--foreground-rgb));
   background: #fff;
 }
+
+@font-face {
+  font-family: "Montserrat";
+  src: url("../public/fonts/Montserrat-VariableFont_wght.ttf")
+    format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
