--- a/book-store/styles/globals.css
+++ b/book-store/styles/globals.css
@@ -16,6 +16,14 @@
   }
 }
 
+@font-face {
+  font-family: "Montserrat";
+  src: url("../public/fonts/Montserrat-VariableFont_wght.ttf")
+    format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: #fff;
