--- a/book-store/components/slider.module.css
+++ b/book-store/components/slider.module.css
@@ -1,5 +1,7 @@
 /* components/Slider.module.css */
 .sliderContainer {
+  display: flex;
+  justify-content: center;
   position: relative;
   width: 100%;
   height: 100%;
