--- a/book-store/components/header.module.css
+++ b/book-store/components/header.module.css
@@ -2,7 +2,7 @@
   display: flex;
   font-family: "Montserrat", sans-serif;
   justify-content: space-between;
-  align-items: center;
+  align-items: left;
   padding: 1rem;
   background-color: #fff;
   color: #000;
@@ -31,6 +31,7 @@
   font-family: "Montserrat", sans-serif;
   font-size: 10px;
   font-weight: 700;
+  text-transform: uppercase;
   line-height: 12px;
   letter-spacing: 0em;
   text-align: left;
