--- a/book-store/components/profile.module.css
+++ b/book-store/components/profile.module.css
@@ -1,3 +1,7 @@
+.page {
+  margin-top: 8rem;
+}
+
 .container {
   display: flex;
   flex-direction: row;
@@ -13,12 +17,14 @@
   letter-spacing: 0em;
   text-align: left;
   color: #1c2a39;
+  margin-left: 2rem;
 }
 
 .container_profile {
   display: flex;
   flex-direction: row;
   align-items: center;
+  height: fit-content;
 }
 
 .container_profile_information {
@@ -47,6 +53,29 @@
   text-align: left;
   color: #000000;
   margin-bottom: 1rem;
+}
+
+.edit_button {
+  flex: 1;
+  height: 2.813rem;
+  width: 11rem;
+  background-color: #ffffff;
+  color: #4c3db2;
+  border: 1px solid #4c3db2;
+  margin-top: 10px;
+  padding: 15px 10px;
+  cursor: pointer;
+  font-size: 8px;
+  font-weight: 700;
+  line-height: 10px;
+  letter-spacing: 0em;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.edit_button:hover {
+  background-color: #4c3db2;
+  color: #ffffff;
 }
 
 .container_about {
