--- a/book-store/components/booklist.module.css
+++ b/book-store/components/booklist.module.css
@@ -1,20 +1,15 @@
 @charset "UTF-8";
+
 .book_container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
   justify-content: space-between;
   max-width: 100%;
   margin: 0 auto;
-  padding: 1.25rem;
+  padding: 1.25rem; 
   font-family: Montserrat;
 }
 
 .categories {
-  -webkit-box-flex: 1;
-  -ms-flex: 1;
   flex: 1;
 }
 
@@ -24,9 +19,9 @@
   height: 20rem;
   padding: 5% 25%;
   background-color: #efeef6;
-  font-size: 0.75rem;
+  font-size: 0.75rem; 
   font-weight: 500;
-  line-height: 0.938rem;
+  line-height: 0.938rem; 
   text-align: left;
   color: #1c2a39;
   list-style-type: none;
@@ -48,124 +43,96 @@
 }
 
 .category_list li.active::before {
-  content: "\2022"; /* Код символа для кружка */
+  content: "\2022"; 
   position: absolute;
-  margin-left: -1em; /* Расположение кружка слева от текста */
-  color: #756ad3; /* Цвет кружка */
-  font-size: 1.2em; /* Размер кружка */
+  margin-left: -1em; 
+  color: #756ad3; 
+  font-size: 1.2em; 
 }
 
 .books {
-  -webkit-box-flex: 2;
-  -ms-flex: 2;
   flex: 2;
 }
 
 .book_list {
   z-index: 1;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  -ms-flex-pack: distribute;
   justify-content: space-between;
   padding: 1em 0em;
   margin-left: -15%;
 }
 
 .book_card {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  width: 40%; /* Ширина каждой книги */
+  width: 40%; 
   margin-bottom: 1.25rem;
   background-color: opacity;
   padding: 0.625rem;
-  -webkit-box-align: start;
-  -ms-flex-align: start;
   align-items: flex-start;
 }
 
 .book_card img {
-  width: 40%; /* Размер обложки книги */
+  width: 40%; 
   height: auto;
   margin-right: 10px;
 }
 
 .book_card .text-info {
-  -webkit-box-flex: 1;
-  -ms-flex: 1;
   flex: 1;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
   height: 100%;
 }
 
 .book_card .authors {
-  -webkit-box-flex: 1;
-  -ms-flex: 1;
   flex: 1;
   margin: 0.5em 0;
   font-family: Open Sans;
-  font-size: 0.625rem;
+  font-size: 0.625rem; 
   font-weight: 400;
-  line-height: 0.875rem;
+  line-height: 0.875rem; 
   letter-spacing: 0em;
   text-align: left;
   color: #5c6a79;
 }
 
 .book_card .rating {
-  -webkit-box-flex: 1;
-  -ms-flex: 1;
   flex: 1;
   font-family: Open Sans;
-  font-size: 0.625rem;
+  font-size: 0.625rem; 
   font-weight: 400;
-  line-height: 0.875rem;
+  line-height: 0.875rem; 
   letter-spacing: 0em;
   text-align: left;
   color: #5c6a79;
 }
 
 .book_card .description {
-  -webkit-box-flex: 1;
-  -ms-flex: 1;
   flex: 1;
   margin: 0.5em 0;
   font-family: Open Sans;
-  font-size: 0.625rem;
+  font-size: 0.625rem; 
   font-weight: 400;
-  line-height: 0.875rem;
+  line-height: 0.875rem; 
   letter-spacing: 0em;
   text-align: left;
   color: #5c6a79;
 }
 
 .book_card .price {
-  -webkit-box-flex: 1;
-  -ms-flex: 1;
   flex: 1;
-  margin-top: 0.625rem;
+  margin-top: 0.625rem; 
   font-weight: bold;
   font-family: Montserrat;
-  font-size: 0.813rem;
-  font-weight: 700;
-  line-height: 1rem;
+  font-size: 0.813rem; 
+  line-height: 1rem; 
   letter-spacing: 0em;
   text-align: left;
 }
 
 .buy_button {
-  -webkit-box-flex: 1;
-  -ms-flex: 1;
   flex: 1;
   height: 5em;
   background-color: #ffffff;
@@ -174,9 +141,9 @@
   margin-top: 10px;
   padding: 5px 10px;
   cursor: pointer;
-  font-size: 8px;
+  font-size: 0.5rem; 
   font-weight: 700;
-  line-height: 10px;
+  line-height: 0.625rem; 
   letter-spacing: 0em;
   text-align: center;
   text-transform: uppercase;
@@ -197,9 +164,9 @@
   margin-top: 10px;
   padding: 5px 10px;
   cursor: pointer;
-  font-size: 8px;
+  font-size: 0.5rem; 
   font-weight: 700;
-  line-height: 10px;
+  line-height: 0.625rem; 
   letter-spacing: 0em;
   text-align: center;
   text-transform: uppercase;
