--- a/book-store/components/cart.module.css
+++ b/book-store/components/cart.module.css
@@ -3,10 +3,10 @@
 }
 
 .title {
-  font-family: "Montserrat;", sans-serif;
-  font-size: 24px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.5rem;
   font-weight: 700;
-  line-height: 29px;
+  line-height: 1.813rem;
   letter-spacing: 0em;
   text-align: left;
   color: #1c2a39;
@@ -21,10 +21,10 @@
   width: 85%;
   margin-left: 2rem;
   margin-top: 2rem;
-  font-family: "Montserrat;", sans-serif;
-  font-size: 10px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 0.625rem;
   font-weight: 700;
-  line-height: 12px;
+  line-height: 0.75rem;
   letter-spacing: 0em;
   text-align: left;
   color: #5c6a79;
@@ -38,10 +38,10 @@
   width: 87%;
   margin-left: 2rem;
   margin-top: 2rem;
-  font-family: "Montserrat;", sans-serif;
-  font-size: 10px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 0.625rem;
   font-weight: 700;
-  line-height: 12px;
+  line-height: 0.75rem;
   letter-spacing: 0em;
   text-align: left;
   color: #5c6a79;
@@ -59,10 +59,10 @@
 }
 
 .quantity {
-  font-family: "Montserrat;", sans-serif;
-  font-size: 16px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 1rem;
   font-weight: 700;
-  line-height: 20px;
+  line-height: 1.25rem;
   letter-spacing: 0em;
   text-align: left;
   color: #5c6a79;
@@ -77,11 +77,11 @@
   border: 1px solid #4c3db2;
   margin-top: 10px;
   margin-left: 2rem;
-  padding: 15px 10px;
+  padding: 0.938rem 0.625rem;
   cursor: pointer;
-  font-size: 8px;
+  font-size: 0.5rem;
   font-weight: 700;
-  line-height: 10px;
+  line-height: 0.625rem;
   letter-spacing: 0em;
   text-align: center;
   text-transform: uppercase;
