--- a/book-store/components/header.module.css
+++ b/book-store/components/header.module.css
@@ -11,9 +11,9 @@
 
 .title {
   font-family: "Montserrat", sans-serif;
-  font-size: 24px;
+  font-size: 1.5rem;
   font-weight: 700;
-  line-height: 29px;
+  line-height: 1.813rem;
   letter-spacing: 0em;
   text-align: left;
   color: #1c2a39;
@@ -29,10 +29,10 @@
 
 .shop_menu li {
   font-family: "Montserrat", sans-serif;
-  font-size: 10px;
+  font-size: 0.625rem;
   font-weight: 700;
   text-transform: uppercase;
-  line-height: 12px;
+  line-height: 0.75rem;
   letter-spacing: 0em;
   text-align: left;
   color: #5c6a79;
@@ -40,9 +40,9 @@
 
 .shop_menu li:hover {
   font-family: "Montserrat", sans-serif;
-  font-size: 10px;
+  font-size: 0.625rem;
   font-weight: 900;
-  line-height: 12px;
+  line-height: 0.75rem;
   letter-spacing: 0em;
   text-align: left;
   color: #1c2a39;
