--- a/book-store/components/profile.module.css
+++ b/book-store/components/profile.module.css
@@ -10,10 +10,10 @@
 }
 
 .title {
-  font-family: "Montserrat;", sans-serif;
-  font-size: 24px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.5rem;
   font-weight: 700;
-  line-height: 29px;
+  line-height: 1.813rem;
   letter-spacing: 0em;
   text-align: left;
   color: #1c2a39;
@@ -34,10 +34,10 @@
 }
 
 .profile_header {
-  font-family: "Montserrat;", sans-serif;
-  font-size: 12px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 0.75rem;
   font-weight: 700;
-  line-height: 15px;
+  line-height: 0.938rem;
   letter-spacing: 0em;
   text-align: left;
   color: #000000;
@@ -45,10 +45,10 @@
 }
 
 .profile_name {
-  font-family: "Montserrat;", sans-serif;
-  font-size: 24px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.5rem;
   font-weight: 700;
-  line-height: 29px;
+  line-height: 1.813rem;
   letter-spacing: 0em;
   text-align: left;
   color: #000000;
@@ -63,11 +63,11 @@
   color: #4c3db2;
   border: 1px solid #4c3db2;
   margin-top: 10px;
-  padding: 15px 10px;
+  padding: 0.938rem 0.625rem;
   cursor: pointer;
-  font-size: 8px;
+  font-size: 0.5rem;
   font-weight: 700;
-  line-height: 10px;
+  line-height: 0.625rem;
   letter-spacing: 0em;
   text-align: center;
   text-transform: uppercase;
@@ -87,10 +87,10 @@
 }
 
 .about_header {
-  font-family: "Montserrat;", sans-serif;
-  font-size: 12px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 0.75rem;
   font-weight: 700;
-  line-height: 15px;
+  line-height: 0.938rem;
   letter-spacing: 0em;
   text-align: left;
   color: #000000;
@@ -101,10 +101,10 @@
 .about_text {
   width: 18.5rem;
   margin: 0 auto;
-  font-family: Montserrat;
-  font-size: 12px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 0.75rem;
   font-weight: 600;
-  line-height: 15px;
+  line-height: 0.938rem;
   letter-spacing: 0em;
   text-align: left;
   color: #5c6a79;
