--- a/book-store/components/slider.module.css
+++ b/book-store/components/slider.module.css
@@ -1,4 +1,3 @@
-/* components/Slider.module.css */
 .sliderContainer {
   display: flex;
   justify-content: center;
@@ -9,7 +8,7 @@
 
 .swiper-pagination {
   position: absolute;
-  bottom: 10px;
+  bottom: 0.625rem;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
@@ -19,22 +18,22 @@
 }
 
 .swiper-pagination-bullet {
-  width: 8px;
-  height: 8px;
+  width: 0.5rem;
+  height: 0.5rem;
   background-color: #fff;
   border-radius: 50%;
-  margin: 0 4px;
+  margin: 0 0.25rem;
   opacity: 0.7;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
 
 .swiper-pagination-bullet-active {
-  background-color: #ff4500; /* Цвет активной точки */
+  background-color: #ff4500;
 }
 
 .banner {
   display: flex;
   justify-content: center;
-  width: 90%;
+  width: 5.625rem;
 }
