--- a/book-store/components/authpopup.module.css
+++ b/book-store/components/authpopup.module.css
@@ -1,12 +1,10 @@
+.profile_icon_container {
+  position: relative;
+}
+
 .auth_popup_container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  position: relative;
+  margin-top: 5rem;
 }
 
 .auth_popup {
